auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      imagePullSecrets:
        - name: nexus-creds
      containers:
        - name: auth
          image: jihengharbi/jihen-auth:latest
          ports:
            - containerPort: 3000
