client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      imagePullSecrets:
        - name: nexus-creds
      containers:
        - name: client
          image: jihengharbi/jihen-client:latest
          ports:
            - containerPort: 3000
