expiration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-deployment
  labels:
    app: expiration
spec:
  replicas: 2
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      imagePullSecrets:
        - name: nexus-creds
      containers:
        - name: expiration
          image: jihengharbi/jihen-expiration:latest
          ports:
            - containerPort: 3000
