orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
  labels:
    app: orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      imagePullSecrets:
        - name: nexus-creds
      containers:
        - name: orders
          image: jihengharbi/jihen-orders:latest
          ports:
            - containerPort: 3000
