tickets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
  labels:
    app: tickets
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      imagePullSecrets:
        - name: nexus-creds
      containers:
        - name: tickets
          image: jihengharbi/jihen-tickets:latest 
          ports:
            - containerPort: 3000
