expiration-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expiration-service
spec:
  selector:
    app: expiration
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
