payment-service.yml
apiVersion: v1
kind: Service
metadata:
  name: payments-service
spec:
  selector:
    app: payments
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
