tickets-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tickets-service
spec:
  selector:
    app: tickets
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
